<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:layout_marginStart="@dimen/list_margin_horizontal"
    android:layout_marginEnd="@dimen/list_margin_horizontal"
    >
        <LinearLayout
            android:id="@+id/subsession_exercise_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/shape_subsession_title">

            <TextView
                android:id="@+id/text_fit_subsession_exercise_name"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/list_padding"/>
            <TextView
                android:id="@+id/text_fit_subsession_exercise_type"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/list_padding"/>
        </LinearLayout>

        <TextView
            android:id="@+id/subsession_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:padding="@dimen/list_padding"
            android:background="@drawable/shape_subsession_details"/>

    <LinearLayout
        android:id="@+id/subsession_edit_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/shape_subsession_editing"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/exercise_edit_weight_input"
                android:layout_width="0dp"
                android:layout_weight="0.70"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="kg" />
            <EditText
                android:id="@+id/exercise_edit_sets_input"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textSize="20sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="组" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text=" x " />
            <EditText
                android:id="@+id/exercise_edit_reps_input"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textSize="20sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="次" />
        </LinearLayout>

        <ImageView
            android:id="@+id/subsession_add_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_add_black_30dp"
            android:contentDescription="@string/add_set" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/subsession_delete"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_delete_black_24dp"
                android:contentDescription="@string/delete" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"/>

            <ImageView
                android:id="@+id/subsession_confirm"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_check_circle_black_24dp"
                android:contentDescription="@string/confirm" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
